<resources>
    <string name="app_name">TeamTarget</string>
    <string name="title_activity_main">Target</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_new">New</string>
    <string name="action_overflow">Overflow</string>
    <string name="action_back">Back</string>
    <string name="tab1">工作台</string>
    <string name="tab2">项目</string>
    <string name="tab3">消息</string>
    <string name="common_project">常用项目</string>
    <string name="participated_project">参与项目</string>
    <string name="new_project">新建项目</string>
    <string name="new_task">新建任务</string>
    <string name="new_schedule">新建日程</string>
    <string name="recent_new">最新动态</string>
    <string name="my_task">我的任务</string>
    <string name="my_schedule">我的日程</string>
    <string name="recent_task">最近任务</string>
    <string name="today_schedule">今天日程</string>
    <string name="my_message">我的消息</string>
    <string name="title_activity_new_project">NewProjectActivity</string>
    <string name="project_name">项目名称</string>
    <string name="owner">所有者</string>
    <string name="publicity">公开性</string>
    <string name="personal_project">个人项目</string>
    <string name="cancel">取消</string>
    <string name="private_project">私有项目</string>
    <string name="public_project">公开项目</string>
    <string name="title_activity_task_list">TaskListActivity</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="input_comment">输入评论</string>
    <string name="distribute">分配</string>
    <string name="deadline">截止日期</string>
    <string name="tag">标签</string>
    <string name="comment">评论</string>
    <string name="title_activity_edit_task_description">EditTaskDescriptionActivity</string>
    <string name="action_tick">Tick</string>
    <string name="title_activity_my_task">MyTaskActivity</string>
    <string name="working_on">进行中</string>
    <string name="out_of_date">已过期</string>
    <string name="finished">已完成</string>
    <string name="new_task_list">新建任务列表</string>
    <string name="title_activity_add_task_list">AddTaskListActivity</string>
    <string name="input_task_list_name">输入任务列表名称</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="project">项目</string>
    <string name="task_list">任务列表</string>
    <string name="chose_project">选择项目</string>
    <string name="title_activity_my_schedule">MyScheduleActivity</string>
    <string name="title_activity_add_schedule">AddScheduleActivity</string>
    <string name="title_activity_new_schedule">新建日程</string>
    <string name="input_schedule_name">输入日程名称</string>
    <string name="input_schedule_content">输入日程内容</string>
    <string name="title_activity_diary">DiaryActivity</string>




</resources>
