<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="bm.com.graduationproject.teamtarget.TaskActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <!-- title -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"

                >


                <CheckBox
                    android:id="@+id/task_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    />


                <TextView
                    android:id="@+id/task_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_toRightOf="@id/task_checkbox"
                    android:padding="5dp"
                    />

                <TextView
                    android:id="@+id/task_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/task_name"
                    android:layout_alignLeft="@id/task_name"
                    android:paddingLeft="5dp"
                    android:textSize="15sp"
                    android:textColor="@android:color/darker_gray"
                    />

                </RelativeLayout>


            <!--separating line -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"

                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>


            <!--distribute to -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distribute"
                    android:layout_alignParentLeft="true"
                    android:textSize="18sp"/>

                </RelativeLayout>

            <!--separating line -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"

                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <!--deadline -->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deadline_click"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deadline"
                    android:layout_alignParentLeft="true"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/dialog_text_deadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@android:color/darker_gray"/>

                </RelativeLayout>


            <!--separating line -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"

                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>


            <!-- tag-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tag"
                    android:layout_alignParentLeft="true"
                    android:textSize="18sp"/>

                </RelativeLayout>


            <!--separating line -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"

                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>


            <!--comment -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/comment_fixed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment"
                    android:layout_alignParentLeft="true"
                    android:textSize="18sp"/>

                <ListView
                    android:id="@+id/comment_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/comment_fixed"
                    android:layout_alignLeft="@id/comment_fixed"
                    android:divider="@android:color/darker_gray"
                    android:dividerHeight="2px"
                    android:headerDividersEnabled="true"
                    android:footerDividersEnabled="false">


                    </ListView>


                </RelativeLayout>



            </LinearLayout>

        </ScrollView>



    <EditText
        android:id="@+id/task_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:hint="@string/input_comment"/>

</RelativeLayout>
